[package]
name = "szfs"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[[bin]]
name = "fs-walker"

[[bin]]
name = "undelete"

[[bin]]
name = "undelete-mt"

[[bin]]
name = "read-dva"

[[bin]]
name = "find-block-by-hash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "*"
rayon = "*"
num_cpus = "*"