[package]
name = "szfs"
version = "0.1.0"
edition = "2021"

[features]
debug = []
yolo = []

[[bin]]
name = "fs-walker"

[[bin]]
name = "filter-checkpoint"

[[bin]]
name = "undelete"

[[bin]]
name = "build-checksum-table"

[[bin]]
name = "find-block-with-checksum"

[[bin]]
name = "read-dva"

[[bin]]
name = "recover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "*"
rayon = "*"
num_cpus = "*"
fftconvolve = "*"
ndarray = "*"
lazy_static = "*"